AngularDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 3  # Set the number of replicas to 3
  selector:
    matchLabels:
      app: angular-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: your-dockerhub-username/angular-app:latest
        ports:
        - containerPort: 80
