Spring_Angular_Services.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP
  selector:
    app: angular-app
  ports:
  - port: 80
    targetPort: 80
